# GameProjectTeste

./: .gitignore  CMakeLists.txt  CMakeSettings.json  imgui.ini  packages.config  vcpkg.json
assets/: imgui.ini
assets/scenes/: untitled.yaml
assets/shaders/: default.frag  default.vert
src/: Example.hpp  Player.h  main.cpp
